# Waybar-Assignment2

./: ACCESSIBILITY_REPORT.md  DEPENDENCY_ERRORS.md  TESTING_LOG.md  a2 documentation.md  meson.build
test-configs/: animation-stress.css  animation-stress.jsonc  corrupt-image.jsonc  format-crash.jsonc  recursion-bomb.jsonc  release-the-kraken-config.json  release-the-kraken-style.css  spam-config.jsonc  zombie-script.jsonc
test-configs/customTest/: meson.build  multimediaTest.cpp
test-configs/customTest/data/: mocks.cpp
test-configs/test-session/: Observations.md  technical-analysis.md  testlog-trimmed.txt
test-configs/test-session-verbose/: BUGS.md  DEPENDENCY_ERRORS.md  README.TXT  TESTING_LOG.md
